--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes flash {
+  0% {
+    transform: rotate(45deg) translateX(-500%) translateY(-30%);
+  }
+  100% {
+    transform: rotate(45deg) translateX(500%) translateY(-30%);
+  }
+}
+
+.flash-animation {
+  position: relative;
+}
+
+.animate-flash {
+  animation: flash 1.5s linear infinite;
+}
